# projeto-python-duckdb

./: Dockerfile  README.md  app.py  pyproject.toml
