[tool.poetry]
name = "projeto-python-duckdb"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Reis",email = "lucasreis95@live.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
